kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: connector-admin
  labels:
    app: connector-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connector-admin
  template:
    metadata:
      labels:
        app: connector-admin
    spec:
      containers:
        - name: connector-admin
          image: 765415433338.dkr.ecr.eu-central-1.amazonaws.com/connector-admin:$IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: connector-admin
spec:
  selector:
    app: connector-admin
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connector-admin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS, DELETE, PUT
    nginx.ingress.kubernetes.io/cors-allow-origin: https://eau.med-united.health
    nginx.ingress.kubernetes.io/cors-expose-headers: X-Custom-Header
spec:
  tls:
    - hosts:
        - connector-admin.med-united.health
      secretName: connector-admin-tls
  rules:
    - host: connector-admin.med-united.health
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connector-admin
                port:
                  number: 8080
